--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
   <script src="libraries/p5.js"></script>
   <script src="libraries/p5.dom.min.js"></script>
   <script src="libraries/p5.play.js"></script>
 
-  <script src="form.js"></script>
-<!--Link game.js and player.js-->
-<script src="player.js"></script>
-<script src="game.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  
 
 <!--Add database config here below-->
 <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
@@ -30,13 +29,13 @@
   </head>
   <body>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <meta charset="utf-8">
+  
 
-</head>
-<body>
   <script src="sketch.js"></script>
+  <script src="form.js"></script>
+  <script src="player.js"></script>
+  <script src="game.js"></script>
 
 
-
-</body></html>
+</body>
+</html>
